feat: Update Lombok version to 1.18.34 and enhance compatibility with Java 21; modify .classpath and build.gradle for improved dependency management